fix global scrollbar style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,3 +6,8 @@
 ::-webkit-scrollbar-track {
   background: #1a1a1a;
 }
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color:rgb(212, 212, 216) transparent;
+}
